@@ -32,7 +32,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import owl.automaton.Automaton;
 import owl.automaton.acceptance.ParityAcceptance;
@@ -54,30 +53,30 @@ public abstract class SymbolicDRA2DPAConstruction {
   private List<RabinPair> toRabin() {
     return PropositionalFormula.disjuncts(automaton().acceptance().booleanExpression()).stream()
       .map(disjunct -> {
-        var conjuncts = ((PropositionalFormula.Conjunction<Integer>) disjunct).conjuncts;
+        var conjuncts = ((PropositionalFormula.Conjunction<Integer>) disjunct).conjuncts();
         assert conjuncts.size() == 2;
         int finSet = -1;
         int infSet = -1;
-        if (conjuncts.get(0) instanceof PropositionalFormula.Variable) {
-          infSet = ((PropositionalFormula.Variable<Integer>) conjuncts.get(0)).variable;
+        if (conjuncts.get(0) instanceof PropositionalFormula.Variable<Integer> variable) {
+          infSet = variable.variable();
         } else {
           finSet =
             ((PropositionalFormula.Variable<Integer>)
               ((PropositionalFormula.Negation<Integer>) conjuncts
-            .get(0)).operand
-            ).variable;
+            .get(0)).operand()
+            ).variable();
         }
-        if (conjuncts.get(1) instanceof PropositionalFormula.Variable) {
-          infSet = ((PropositionalFormula.Variable<Integer>) conjuncts.get(1)).variable;
+        if (conjuncts.get(1) instanceof PropositionalFormula.Variable<Integer> variable) {
+          infSet = variable.variable();
         } else {
           finSet =
             ((PropositionalFormula.Variable<Integer>)
               ((PropositionalFormula.Negation<Integer>) conjuncts
-            .get(1)).operand).variable;
+            .get(1)).operand()).variable();
         }
         return new RabinPair(finSet, infSet);
       }
-    ).collect(Collectors.toList());
+    ).toList();
   }
 
   /**
@@ -354,7 +353,7 @@ public abstract class SymbolicDRA2DPAConstruction {
         newFinSets.addAll(pair.infIndices);
         return new RabinPair(newFinSets, pair2.infIndices);
       })
-      .collect(Collectors.toList());
+      .toList();
   }
 
   /**
@@ -483,7 +482,7 @@ public abstract class SymbolicDRA2DPAConstruction {
       variables.addAll(rabinAllocation.variableNames());
       int numberOfRabinColours = rabinAllocation.variables(COLOUR).size();
       variables.addAll(IntStream.range(0, parityColourVariables.size()).mapToObj(i ->
-        "c_" + (i + numberOfRabinColours)).collect(Collectors.toList()));
+        "c_" + (i + numberOfRabinColours)).toList());
       return variables;
     }
 
